# nlpeer

./: .gitignore  NOTICE.txt  README.md  pyproject.toml  requirements.txt  setup.py
nlpeer/: __init__.py  utils.py
nlpeer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nlpeer/data/: __init__.py
nlpeer/data/annotate/: explicit_links.py  f1000rd.py
nlpeer/data/collect/: __init__.py  coling20.py
nlpeer/data/create/: clean.py  parse.py
nlpeer/resources/: exp_patterns.tsv
nlpeer/tasks/pragmatic_labeling/: evaluate.py  train.py
nlpeer/tasks/pragmatic_labeling/models/: TransformerBased.py
nlpeer/tasks/review_score/: data.py
nlpeer/tasks/review_score/models/: TransformerBased.py  baseline.py
nlpeer/tasks/skimming/: data.py
nlpeer/tasks/skimming/models/: LengthBaseline.py
src/nlpeer/: __init__.py
src/nlpeer/data/collect/: peerread.py
src/nlpeer/data/create/: utils.py
src/nlpeer/tasks/: __init__.py
src/nlpeer/tasks/pragmatic_labeling/: data.py
src/nlpeer/tasks/review_score/: evaluate.py  train.py
src/nlpeer/tasks/skimming/: evaluate.py  train.py
src/nlpeer/tasks/skimming/models/: TransformerBased.py
