[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpeer"  # Replace with your package name
version = "0.2.0"  # Your package version
description = "Code utilities for loading NLPeer data and for running experiments."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Nils Dycke", email = "nils.dycke@tu-darmstadt.de" }
]
keywords = ["nlpeer", "peer review", "nlp for peer review", "resource"]
dependencies = [
    "PyPDF2>=2.6.0",
    "nltk>=3.9.1",
    "torch>=1.12.1",
    "transformers>=4.22.2",
    "datasets>=2.6.1",
    "pytorch_lightning>=1.7.7",
    "wandb>=0.13.4",
    "scikit-learn>=1.6.0",
    "spacecutter>=0.2.1",
    "plotly>=5.11.0",
    "spacy>=3.4.0",
    "scispacy>=0.5.1",
    "fuzzysearch>=0.7.3",
    "Levenshtein>=0.20.8",
    "pulp>=2.6.0",
    "simplejson>=3.17.6",
    "kaleido>=0.2.1",
    "intertext-graph @ git+https://github.com/UKPLab/intertext-graph.git",
    "grobid_client_python @ git+https://github.com/kermitt2/grobid_client_python.git"
]
requires-python = ">=3.10"
